// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResponsiveEllipsis /> renders properly with default props 1`] = `
<Responsive(LinesEllipsis)
  basedOn="words"
  ellipsis="..."
  innerRef={[Function]}
  maxLine="1"
  style={
    Object {
      "whiteSpace": "pre-wrap",
    }
  }
  text=""
  trimRight={true}
/>
`;

exports[`<ResponsiveEllipsis /> renders properly with long text and maxLine provided 1`] = `
<Responsive(LinesEllipsis)
  basedOn="words"
  ellipsis="..."
  innerRef={[Function]}
  maxLine="2"
  style={
    Object {
      "whiteSpace": "pre-wrap",
    }
  }
  text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc rutrum justo sit amet suscipit tempor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Phasellus magna lacus, egestas vitae urna sed, pulvinar blandit sem. Donec ultrices dolor at neque convallis, ut fringilla quam tincidunt."
  trimRight={true}
/>
`;

exports[`<ResponsiveEllipsis /> renders properly with text and basedOn letters provided 1`] = `
<Responsive(LinesEllipsis)
  basedOn="letters"
  ellipsis="..."
  innerRef={[Function]}
  maxLine="1"
  style={
    Object {
      "whiteSpace": "pre-wrap",
    }
  }
  text="Lorem ipsum dolor sit amet"
  trimRight={true}
/>
`;

exports[`<ResponsiveEllipsis /> renders properly with text and basedOn words provided 1`] = `
<Responsive(LinesEllipsis)
  basedOn="words"
  ellipsis="..."
  innerRef={[Function]}
  maxLine="1"
  style={
    Object {
      "whiteSpace": "pre-wrap",
    }
  }
  text="Lorem ipsum dolor sit amet"
  trimRight={true}
/>
`;

exports[`<ResponsiveEllipsis /> renders properly with text and ellipsis provided 1`] = `
<Responsive(LinesEllipsis)
  basedOn="words"
  ellipsis="***"
  innerRef={[Function]}
  maxLine="1"
  style={
    Object {
      "whiteSpace": "pre-wrap",
    }
  }
  text="Lorem ipsum dolor sit amet"
  trimRight={true}
/>
`;

exports[`<ResponsiveEllipsis /> renders properly with text provided 1`] = `
<Responsive(LinesEllipsis)
  basedOn="words"
  ellipsis="..."
  innerRef={[Function]}
  maxLine="1"
  style={
    Object {
      "whiteSpace": "pre-wrap",
    }
  }
  text="Lorem ipsum dolor sit amet"
  trimRight={true}
/>
`;
